--- a/about/bookmarks/index.html
+++ b/about/bookmarks/index.html
@@ -21,19 +21,19 @@
 <h2 id="web-friends--cool-sites">Web Friends &amp; Cool Sites</h2>
 
 <ul class="extra">
-<li><a href="https://www.pixouls.xyz/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Pixoul&#39;s Site</a></li>
+<li><a href="https://www.pixouls.xyz/"  target="_blank" rel="noreferrer" >↗ ⬩ Pixoul&#39;s Site</a></li>
 
-<li><a href="https://lucas.love/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Lucas.love</a></li>
+<li><a href="https://lucas.love/"  target="_blank" rel="noreferrer" >↗ ⬩ Lucas.love</a></li>
 
-<li><a href="https://ghettobastler.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Ghettobastler</a></li>
+<li><a href="https://ghettobastler.com/"  target="_blank" rel="noreferrer" >↗ ⬩ Ghettobastler</a></li>
 
-<li><a href="https://www.simonpanrucker.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Simon Panrucker&#39;s Site</a></li>
+<li><a href="https://www.simonpanrucker.com/"  target="_blank" rel="noreferrer" >↗ ⬩ Simon Panrucker&#39;s Site</a></li>
 
-<li><a href="https://thesam.zone/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ theSam.Zone</a></li>
+<li><a href="https://thesam.zone/"  target="_blank" rel="noreferrer" >↗ ⬩ theSam.Zone</a></li>
 
-<li><a href="https://jagtalon.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Jag Talon</a></li>
+<li><a href="https://jagtalon.com/"  target="_blank" rel="noreferrer" >↗ ⬩ Jag Talon</a></li>
 
-<li><a href="https://www.paritybit.ca/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ jbauer&#39;s Site</a></li>
+<li><a href="https://www.paritybit.ca/"  target="_blank" rel="noreferrer" >↗ ⬩ jbauer&#39;s Site</a></li>
 
 </ul>
 
@@ -41,105 +41,105 @@
 <h2 id="webring">Webring</h2>
 
 <ul class="extra">
-<li><a href="https://wiki.xxiivv.com/site/home.html"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ XXIIVV Wiki</a></li>
+<li><a href="https://wiki.xxiivv.com/site/home.html"  target="_blank" rel="noreferrer" >↗ ⬩ XXIIVV Wiki</a></li>
 
-<li><a href="https://ritualdust.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ RitualDust</a></li>
+<li><a href="https://ritualdust.com/"  target="_blank" rel="noreferrer" >↗ ⬩ RitualDust</a></li>
 
-<li><a href="https://thomasorus.com"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Thomasorus</a></li>
+<li><a href="https://thomasorus.com"  target="_blank" rel="noreferrer" >↗ ⬩ Thomasorus</a></li>
 
-<li><a href="https://kokorobot.ca/site/home.html"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Kokorobot</a></li>
+<li><a href="https://kokorobot.ca/site/home.html"  target="_blank" rel="noreferrer" >↗ ⬩ Kokorobot</a></li>
 
-<li><a href="https://fdisk.space/#"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Fdisk</a></li>
+<li><a href="https://fdisk.space/#"  target="_blank" rel="noreferrer" >↗ ⬩ Fdisk</a></li>
 
-<li><a href="https://njoqi.me/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ njoqi</a></li>
+<li><a href="https://njoqi.me/"  target="_blank" rel="noreferrer" >↗ ⬩ njoqi</a></li>
 </ul>
 
 
 <h2 id="web-magazines">Web Magazines</h2>
 
 <ul class="extra">
-<li><a href="https://solar.lowtechmagazine.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Low Tech Magazine</a></li>
+<li><a href="https://solar.lowtechmagazine.com/"  target="_blank" rel="noreferrer" >↗ ⬩ Low Tech Magazine</a></li>
 
-<li><a href="https://reallifemag.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Real Life Mag</a></li>
+<li><a href="https://reallifemag.com/"  target="_blank" rel="noreferrer" >↗ ⬩ Real Life Mag</a></li>
 
-<li><a href="https://two.compost.digital/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Compost</a></li>
+<li><a href="https://two.compost.digital/"  target="_blank" rel="noreferrer" >↗ ⬩ Compost</a></li>
 
-<li><a href="https://www.orphenyade.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ the Orphenyade</a></li>
+<li><a href="https://www.orphenyade.com/"  target="_blank" rel="noreferrer" >↗ ⬩ the Orphenyade</a></li>
 </ul>
 
 
 <h2 id="pools-of-knowledge">Pools of Knowledge</h2>
 
 <ul class="extra">
-<li><a href="https://practicalselfreliance.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Practical Self Reliance</a></li>
+<li><a href="https://practicalselfreliance.com/"  target="_blank" rel="noreferrer" >↗ ⬩ Practical Self Reliance</a></li>
 
-<li><a href="https://100r.co/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Hundred Rabbits</a></li>
+<li><a href="https://100r.co/"  target="_blank" rel="noreferrer" >↗ ⬩ Hundred Rabbits</a></li>
 
-<li><a href="https://moddingfridays.bleu255.com/Main_Page"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Modding Fridays</a></li>
+<li><a href="https://moddingfridays.bleu255.com/Main_Page"  target="_blank" rel="noreferrer" >↗ ⬩ Modding Fridays</a></li>
 </ul>
 
 
 <h2 id="fun-web-stuff">Fun Web Stuff</h2>
 
 <ul class="extra">
-<li><a href="https://search.marginalia.nu/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Marginalia Search Engine</a></li>
+<li><a href="https://search.marginalia.nu/"  target="_blank" rel="noreferrer" >↗ ⬩ Marginalia Search Engine</a></li>
 
-<li><a href="https://www.kickscondor.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Kicks Condor</a></li>
+<li><a href="https://www.kickscondor.com/"  target="_blank" rel="noreferrer" >↗ ⬩ Kicks Condor</a></li>
 
-<li><a href="https://status.cafe/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Status Cafe</a></li>
+<li><a href="https://status.cafe/"  target="_blank" rel="noreferrer" >↗ ⬩ Status Cafe</a></li>
 
-<li><a href="https://portal.mozz.us/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Mozz&#39;s Gemini Portal</a></li>
+<li><a href="https://portal.mozz.us/"  target="_blank" rel="noreferrer" >↗ ⬩ Mozz&#39;s Gemini Portal</a></li>
 
-<li><a href="http://www.wattxtrawatt.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ WattExtraWatt</a></li>
+<li><a href="http://www.wattxtrawatt.com/"  target="_blank" rel="noreferrer" >↗ ⬩ WattExtraWatt</a></li>
 </ul>
 
 
 <h2 id="design-links">Design Links</h2>
 
 <ul class="extra">
-<li><a href="https://www.theleagueofmoveabletype.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ League of Moveable Type Fonts</a></li>
+<li><a href="https://www.theleagueofmoveabletype.com/"  target="_blank" rel="noreferrer" >↗ ⬩ League of Moveable Type Fonts</a></li>
 
-<li><a href="https://publicdomainreview.org/collection/unkindo-kimono-designs"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Collection of Kimono Pattern Designs</a></li>
+<li><a href="https://publicdomainreview.org/collection/unkindo-kimono-designs"  target="_blank" rel="noreferrer" >↗ ⬩ Collection of Kimono Pattern Designs</a></li>
 
-<li><a href="https://fontsinuse.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Fonts in Use</a></li>
+<li><a href="https://fontsinuse.com/"  target="_blank" rel="noreferrer" >↗ ⬩ Fonts in Use</a></li>
 
-<li><a href="https://cari.institute/aesthetics"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Aesthetics Reference Wiki</a></li>
+<li><a href="https://cari.institute/aesthetics"  target="_blank" rel="noreferrer" >↗ ⬩ Aesthetics Reference Wiki</a></li>
 
-<li><a href="https://usemodify.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Use&amp;Modify</a></li>
+<li><a href="https://usemodify.com/"  target="_blank" rel="noreferrer" >↗ ⬩ Use&amp;Modify</a></li>
 
-<li><a href="https://unilist.raphaelbastide.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Unilist</a></li>
+<li><a href="https://unilist.raphaelbastide.com/"  target="_blank" rel="noreferrer" >↗ ⬩ Unilist</a></li>
 </ul>
 
 
 <h2 id="interesting-links">Interesting Links</h2>
 
 <ul class="extra">
-<li><a href="https://www.freethegameboy.info/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ The Battery-less Gameboy</a></li>
+<li><a href="https://www.freethegameboy.info/"  target="_blank" rel="noreferrer" >↗ ⬩ The Battery-less Gameboy</a></li>
 
-<li><a href="https://fontsinuse.com/uses/28760/neon-genesis-evangelion"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ The Fonts of Neon Genesis Evangelion</a></li>
+<li><a href="https://fontsinuse.com/uses/28760/neon-genesis-evangelion"  target="_blank" rel="noreferrer" >↗ ⬩ The Fonts of Neon Genesis Evangelion</a></li>
 
-<li><a href="https://buymusic.club/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Buy Music Club</a></li>
+<li><a href="https://buymusic.club/"  target="_blank" rel="noreferrer" >↗ ⬩ Buy Music Club</a></li>
 
-<li><a href="https://onezero.medium.com/the-tamagotchi-hacking-communitys-quest-to-cheat-death-dc3e7ee27a0f"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Article on Tamagotchi hacking</a></li>
+<li><a href="https://onezero.medium.com/the-tamagotchi-hacking-communitys-quest-to-cheat-death-dc3e7ee27a0f"  target="_blank" rel="noreferrer" >↗ ⬩ Article on Tamagotchi hacking</a></li>
 
-<li><a href="https://animationobsessive.substack.com/p/our-treat-to-you?s=r"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Cartoon Modern Animation Artbook</a></li>
+<li><a href="https://animationobsessive.substack.com/p/our-treat-to-you?s=r"  target="_blank" rel="noreferrer" >↗ ⬩ Cartoon Modern Animation Artbook</a></li>
 
-<li><a href="https://play.date/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ The Playdate console</a></li>
+<li><a href="https://play.date/"  target="_blank" rel="noreferrer" >↗ ⬩ The Playdate console</a></li>
 
-<li><a href="https://consolevariations.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Console Variation Wiki</a></li>
+<li><a href="https://consolevariations.com/"  target="_blank" rel="noreferrer" >↗ ⬩ Console Variation Wiki</a></li>
 </ul>
 
 
 <h2 id="good-reads">Good reads</h2>
 
 <ul class="extra">
-<li><a href="https://www.theguardian.com/artanddesign/gallery/2021/dec/22/swiss-wanderer-soul-of-japan-werner-bischof"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Swiss Photographer who captured 1950s Japan</a></li>
+<li><a href="https://www.theguardian.com/artanddesign/gallery/2021/dec/22/swiss-wanderer-soul-of-japan-werner-bischof"  target="_blank" rel="noreferrer" >↗ ⬩ Swiss Photographer who captured 1950s Japan</a></li>
 
-<li><a href="https://www.ibiblio.org/harris/500milemail.html"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ The case of the 500-mile email</a></li>
+<li><a href="https://www.ibiblio.org/harris/500milemail.html"  target="_blank" rel="noreferrer" >↗ ⬩ The case of the 500-mile email</a></li>
 
-<li><a href="https://lparchive.org/Dwarf-Fortress-Boatmurdered/Introduction/"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Dwarf Fortress: The story of Boatmurdered</a></li>
+<li><a href="https://lparchive.org/Dwarf-Fortress-Boatmurdered/Introduction/"  target="_blank" rel="noreferrer" >↗ ⬩ Dwarf Fortress: The story of Boatmurdered</a></li>
 
-<li><a href="https://alwaysreadthemanual.com/read/issues/3/jeremy-keith/article.html"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ As we may link (about Hypertext)</a></li>
+<li><a href="https://alwaysreadthemanual.com/read/issues/3/jeremy-keith/article.html"  target="_blank" rel="noreferrer" >↗ ⬩ As we may link (about Hypertext)</a></li>
 
 </ul>
 
@@ -147,11 +147,11 @@
 <h2 id="random-wikipedia-pages">Random Wikipedia Pages</h2>
 
 <ul class="extra">
-<li><a href="https://en.wikipedia.org/wiki/Beekeeping_in_Ireland"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Beekeeping in Ireland</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Beekeeping_in_Ireland"  target="_blank" rel="noreferrer" >↗ ⬩ Beekeeping in Ireland</a></li>
 
-<li><a href="https://en.wikipedia.org/wiki/Ishmael_%28Quinn_novel%29"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Ishmael</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Ishmael_%28Quinn_novel%29"  target="_blank" rel="noreferrer" >↗ ⬩ Ishmael</a></li>
 
-<li><a href="https://en.m.wikipedia.org/wiki/Societal_collapse"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Societal Collapse</a></li>
+<li><a href="https://en.m.wikipedia.org/wiki/Societal_collapse"  target="_blank" rel="noreferrer" >↗ ⬩ Societal Collapse</a></li>
 
 </ul>
 
