--- a/design/games/gamejams/index.html
+++ b/design/games/gamejams/index.html
@@ -46,9 +46,9 @@
 
 
 <ul class="extra">
-<li><a href="https://www.lexaloffle.com/bbs/?tid=28691"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Play Tiny Cookie Clicker</a></li>
+<li><a href="https://www.lexaloffle.com/bbs/?tid=28691"  target="_blank" rel="noreferrer" >↗ ⬩ Play Tiny Cookie Clicker</a></li>
 
-<li><a href="https://www.lexaloffle.com/bbs/?tid=34967"  target="_blank" rel="noreferrer" >⬩&nbsp; ⬩ Play Z demo</a></li>
+<li><a href="https://www.lexaloffle.com/bbs/?tid=34967"  target="_blank" rel="noreferrer" >↗ ⬩ Play Z demo</a></li>
 </ul>
 
 
