--- a/design/index.html
+++ b/design/index.html
@@ -18,14 +18,15 @@
 <div class="title"><h1 id="top">Design Portfolio</h1><hr></div>
 <p>Combined collection of works from the past several years of designing, varied in multiple disciplines and mediums. Organised chronologically with the latest works first.</p>
 <div class="listbox box">
-<h2>Table of Contents</h2>
-<details><summary>Expand</summary>
-<ul class="linklist">
+<h2 style="padding:12px 5%;">Table of Contents</h2>
+<details><summary>Menu</summary>
+<ul>
 <li><a href="#2023" >• 2023</a></li>
 <li><a href="#2022" >• 2022</a></li>
 <li><a href="#pre---2022" >• Pre - 2022</a></li>
 </ul>
 </details></div>
+
 
 <h2 id="2023">2023</h2><a href="compacticons" class="clickbox box clickimg" >
 
