--- a/design/themify/index.html
+++ b/design/themify/index.html
@@ -21,7 +21,7 @@
 <figure><img src="/img/design/themify.gif" loading="lazy" alt="A gif showing the various screens of adwaitapod" width="100%" height="100%">
 <figcaption>The various screens of Themify</figcaption></figure>
 
-<div class="listbox box"><div><h2>Features</h2></div><ul class="linklist">
+<div class="listbox box"><div><h2>Features</h2></div><ul>
 
 <li>⚬ Fully colour-customisable user interface. Background and Foreground colours can be set in the theme settings of Rockbox.</li>
 <li>⚬ Adaptive UI elements for player status icons to keep the interface clean and minimal.</li>
@@ -30,7 +30,7 @@
 <li>⚬ Custom Quickscreen, with detailed battery status as well as sliders for brightness and volume.</li>
 <li>⚬ Lossless format file indicators.</li>
 </ul></div></p>
-<div class="listbox box"><div><h2>Extras</h2><p>Extras available via the Github Repo include:</p></div><ul class="linklist">
+<div class="listbox box"><div><h2>Extras</h2><p>Extras available via the Github Repo include:</p></div><ul>
 
 <li>⚬ Larger Fonts for better visibility.</li>
 <li>⚬ Releases with settings for smooth scrolling text (can&rsquo;t be uploaded to Rockbox).</li>
@@ -41,9 +41,9 @@
 <figure><img src="/img/design/themify_02.png" loading="lazy" alt="The extra wallpapers available" width="100%" height="100%">
 <figcaption>Extra Wallpapers available below</figcaption></figure>
 
-<div class="listbox box"><div><h2>Links</h2><p>Download the theme, or read more about how it was made!</p></div><ul class="linklist">
-<li><a href="https://github.com/D0-0K/themify"  target="_blank" rel="noreferrer" >⬩&nbsp; Github Repository</a></li>
-<li><a href="https://themes.rockbox.org/index.php?themeid=3320&amp;target=ipodvideo"  target="_blank" rel="noreferrer" >⬩&nbsp; Rockbox Theme page</a></li>
+<div class="listbox box"><div><h2>Links</h2><p>Download the theme, or read more about how it was made!</p></div><ul>
+<li><a href="https://github.com/D0-0K/themify"  target="_blank" rel="noreferrer" >↗ Github Repository</a></li>
+<li><a href="https://themes.rockbox.org/index.php?themeid=3320&amp;target=ipodvideo"  target="_blank" rel="noreferrer" >↗ Rockbox Theme page</a></li>
 <li><a href="/blog/inside_themify" >• Blog Post looking at Themify&#39;s code</a></li>
 </ul></div>
 
