--- a/wiki/beachfossils/index.html
+++ b/wiki/beachfossils/index.html
@@ -20,12 +20,12 @@
 <p>In my area, coral fossils are by far the most common. I&rsquo;ve found ones of different shapes, sizes and quantities. In ancient times, coral reefs formed around active volcanos, which would have been likely for the seas around Ireland.</p>
 <p>(<a href="https://www.bgs.ac.uk/discovering-geology/fossils-and-geological-time/corals/" target="_blank" rel="noopener">⬩ British Geological Survey</a>)</p>
 <hr>
-<div class="listbox box"><div><h2>Interesting links</h2></div><ul class="linklist">
-<li><a href="http://earthsci.org/expeditions/fossil_shapes/fossil_shapes.html"  target="_blank" rel="noreferrer" >⬩&nbsp; Earth Science Australia identification guide</a></li>
+<div class="listbox box"><div><h2>Interesting links</h2></div><ul>
+<li><a href="http://earthsci.org/expeditions/fossil_shapes/fossil_shapes.html"  target="_blank" rel="noreferrer" >↗ Earth Science Australia identification guide</a></li>
 
-<li><a href="https://www.fossils.ie/p/locations.html"  target="_blank" rel="noreferrer" >⬩&nbsp; Examples of Fossils in Ireland</a></li>
+<li><a href="https://www.fossils.ie/p/locations.html"  target="_blank" rel="noreferrer" >↗ Examples of Fossils in Ireland</a></li>
 
-<li><a href="https://en.wikipedia.org/wiki/Rugosa"  target="_blank" rel="noreferrer" >⬩&nbsp; Wikipedia: Rugosa, a common coral fossil type</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Rugosa"  target="_blank" rel="noreferrer" >↗ Wikipedia: Rugosa, a common coral fossil type</a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/wiki/#nature-wiki">← Back to  Wiki </a>
