--- a/wiki/bees/index.html
+++ b/wiki/bees/index.html
@@ -19,9 +19,9 @@
 <p>Ireland is home to 100 different bee species, with 78% being solitary bee species. This incredible amount of diversity that lives right under our noses fascinates me, and I&rsquo;ve set out to photograph and record as many as I possibly can. As this encyclopedia progresses, I expect the need for it to be further categorised and sectioned.</p>
 <p>Another thing to note is that I don&rsquo;t believe my common bumble bee classifications to be correct, and am in the process of recording more photos to fix this.</p>
 <div class="listbox box">
-<h2>Bee Index</h2>
-<details><summary>Expand</summary>
-<ul class="linklist">
+<h2 style="padding:12px 5%;">Bee Index</h2>
+<details><summary>Menu</summary>
+<ul>
 <li><a href="#leaf-cutter-bee" >• Leaf Cutter Bee</a></li>
 <li><a href="#ashy-miner-bee" >• Ashy Miner Bee</a></li>
 <li><a href="#large-red-tailed-bumble-bee" >• Large Red Tailed Bumble Bee</a></li>
@@ -33,6 +33,7 @@
 <li><a href="#early-mining-bee" >• Early Mining Bee</a></li>
 </ul>
 </details></div>
+
 <hr>
 
 <h2 id="leaf-cutter-bee">Leaf Cutter Bee</h2>
@@ -40,9 +41,9 @@
 <figcaption>Megachile (Delomegachile) willughbiella</figcaption></figure>
 
 <p>The Leaf cutter bee is a near-threatened solitary bee species in Ireland. Identifiable by their unique characteristic of cutting and carrying leaves to use in their nests, which are usually in the ground or small cavities they find. There has only been 136 records of it since the 1800 in Ireland.</p>
-<div class="listbox box"><ul class="linklist">
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56779&amp;keyword=Bees"  target="_blank" rel="noreferrer" >⬩&nbsp; Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/2752239"  target="_blank" rel="noreferrer" >⬩&nbsp; EOL Profile</a></li>
+<div class="listbox box"><ul>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56779&amp;keyword=Bees"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
+<li><a href="https://eol.org/pages/2752239"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
 </ul></div>
 <hr>
 
@@ -51,9 +52,9 @@
 <figcaption>Andrena (Melandrena) cineraria</figcaption></figure>
 
 <p>This solitary bee measures at just around 15mm in length and is one of the earliest bees in the garden each <a href="/gallery/trichrome/spring/">Spring</a>. They are relatively common, and are easily identified by the two grey, or ashy, bands of colour on their Thorax. They nest in the ground by burrowing holes, and are quite active.</p>
-<div class="listbox box"><ul class="linklist">
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55600"  target="_blank" rel="noreferrer" >⬩&nbsp; Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/2747210"  target="_blank" rel="noreferrer" >⬩&nbsp; EOL Profile</a></li>
+<div class="listbox box"><ul>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55600"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
+<li><a href="https://eol.org/pages/2747210"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
 </ul></div>
 <hr>
 
@@ -62,9 +63,9 @@
 <figcaption>Bombus (Melanobombus) lapidarius</figcaption></figure>
 
 <p>One of the largest bees in Ireland, the Large Red Tailed Bumble Bee are considered a threatened species. Every year we usually have a few to spot in the garden during the summer. Easily one of the best bees to capture, as they tend to stay still for long periods of time compared to the smaller, hyper-active bumblers.</p>
-<div class="listbox box"><ul class="linklist">
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55990"  target="_blank" rel="noreferrer" >⬩&nbsp; Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/1065242"  target="_blank" rel="noreferrer" >⬩&nbsp; EOL Profile</a></li>
+<div class="listbox box"><ul>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55990"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
+<li><a href="https://eol.org/pages/1065242"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
 </ul></div>
 <hr>
 
@@ -73,9 +74,9 @@
 <figcaption>Bombus (Melanobombus) lapidarius</figcaption></figure>
 
 <p>The Early Bumble Bee is named for it&rsquo;s early start in the year, appearing as soon as February in some places. They are fairly common, and nest in the ground or aerial cavities like bird boxes. When in flower, the crab-apple tree is rife with these eager bees. They are identified by the two yellow rings on the body, and the orange hairs on their bottoms.</p>
-<div class="listbox box"><ul class="linklist">
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56009"  target="_blank" rel="noreferrer" >⬩&nbsp; Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/1065201"  target="_blank" rel="noreferrer" >⬩&nbsp; EOL Profile</a></li>
+<div class="listbox box"><ul>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56009"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
+<li><a href="https://eol.org/pages/1065201"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
 </ul></div>
 <hr>
 
@@ -84,9 +85,9 @@
 <figcaption>Bombus (Bombus) lucorum</figcaption></figure>
 
 <p>These bright bees are commonly found all over Ireland almost all year round. The workers of the B.locorum and the B.terrestris species are impossible to tell apart by the eye, however if you see this bee it is most likely a Bombus locorum. The Males of this species have a lot more yellow on their bodies than Females, and are striking in appearance.</p>
-<div class="listbox box"><ul class="linklist">
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55973"  target="_blank" rel="noreferrer" >⬩&nbsp; Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/1065136"  target="_blank" rel="noreferrer" >⬩&nbsp; EOL Profile</a></li>
+<div class="listbox box"><ul>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55973"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
+<li><a href="https://eol.org/pages/1065136"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
 </ul></div>
 <hr>
 
@@ -95,9 +96,9 @@
 <figcaption>Bombus (Thoracombus) pascuorum</figcaption></figure>
 
 <p>Likely the most common wild bee species in Ireland, these small fellas can be seen year-round hanging out in whatever is blooming. Their characteristic ginger thorax makes them very easy to spot and identify. These ginger hairs can become faded or bleached by the sun which sometimes make them look similar to the Large carder bee. These small bees nest in surface litter.</p>
-<div class="listbox box"><ul class="linklist">
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56027"  target="_blank" rel="noreferrer" >⬩&nbsp; Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/1065209"  target="_blank" rel="noreferrer" >⬩&nbsp; EOL Profile</a></li>
+<div class="listbox box"><ul>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=56027"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
+<li><a href="https://eol.org/pages/1065209"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
 </ul></div>
 <hr>
 
@@ -106,9 +107,9 @@
 <figcaption>Apis mellifera</figcaption></figure>
 
 <p>Ireland’s only domesticated, honeybee species. These can be seen year round and are extremely common due to being domesticated. According to the distribution map, these are kept far along the east coast of Ireland more than anywhere else in the country.</p>
-<div class="listbox box"><ul class="linklist">
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55923"  target="_blank" rel="noreferrer" >⬩&nbsp; Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/1045608"  target="_blank" rel="noreferrer" >⬩&nbsp; EOL Profile</a></li>
+<div class="listbox box"><ul>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55923"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
+<li><a href="https://eol.org/pages/1045608"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
 </ul></div>
 <hr>
 
@@ -117,9 +118,9 @@
 <figcaption>Bombus Terrestris</figcaption></figure>
 
 <p>Common, year-round bees. The Buff-Tailed bees are best identified by their buff, or off white, bottoms. Generally quite large, the workers of these species are perfectly identical to workers of the White-Tailed Bumble Bees. The bee captured here appears to be a male, which are easier to identify as a Buff-Tail.</p>
-<div class="listbox box"><ul class="linklist">
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55975"  target="_blank" rel="noreferrer" >⬩&nbsp; Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/1177347"  target="_blank" rel="noreferrer" >⬩&nbsp; EOL Profile</a></li>
+<div class="listbox box"><ul>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55975"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
+<li><a href="https://eol.org/pages/1177347"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
 </ul></div>
 <hr>
 
@@ -128,14 +129,14 @@
 <figcaption>Andrena (Trachandrena) haemorrhoa - Male</figcaption></figure>
 
 <p>Another common mining bee, the Early Mining Bee can be seen from March all the way through to August, quite long for it&rsquo;s kind. These bees are really small, between just 11 and 13mm. Females are strikingly orange, with a distinctive red tip of hairs on their abdomen. Males on the other hand aren&rsquo;t as standout, and generally smaller too. Spotted in the Apple tree blooms in late April.</p>
-<div class="listbox box"><ul class="linklist">
-<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55647"  target="_blank" rel="noreferrer" >⬩&nbsp; Irish Biodiversity Data Centre Profile</a></li>
-<li><a href="https://eol.org/pages/2747408"  target="_blank" rel="noreferrer" >⬩&nbsp; EOL Profile</a></li>
+<div class="listbox box"><ul>
+<li><a href="https://species.biodiversityireland.ie/profile.php?taxonId=55647"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre Profile</a></li>
+<li><a href="https://eol.org/pages/2747408"  target="_blank" rel="noreferrer" >↗ EOL Profile</a></li>
 </ul></div>
 <hr>
-<div class="listbox box"><div><h2>Further Reading</h2></div><ul class="linklist">
-<li><a href="https://pollinators.ie/record-pollinators/bees/"  target="_blank" rel="noreferrer" >⬩&nbsp; Irish Biodiversity Data Centre</a></li>
-<li><a href="https://biodiversityireland.ie/identifying-irish-bumblebees/lesson.html"  target="_blank" rel="noreferrer" >⬩&nbsp; Bumble Bee Identification Guide</a></li>
+<div class="listbox box"><div><h2>Further Reading</h2></div><ul>
+<li><a href="https://pollinators.ie/record-pollinators/bees/"  target="_blank" rel="noreferrer" >↗ Irish Biodiversity Data Centre</a></li>
+<li><a href="https://biodiversityireland.ie/identifying-irish-bumblebees/lesson.html"  target="_blank" rel="noreferrer" >↗ Bumble Bee Identification Guide</a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/wiki/#nature-wiki">← Back to  Wiki </a>
