--- a/wiki/linux/imagemagick/index.html
+++ b/wiki/linux/imagemagick/index.html
@@ -22,9 +22,9 @@
 <h3 id="mogrify-vs-convert">Mogrify vs Convert</h3><p>Most of what we&rsquo;ll be looking at will be using the <strong>Mogrify</strong> command, however there are other ImageMagick commands, the most relevant to use here being the <strong>Convert</strong> command. For the most part, both commands do the same things however the way they do them differs. <strong>Mogrify</strong> is pretty general and (most times) overwrites the targetted files, <strong>Convert</strong> on the other hand creates a separate file which it outputs to. With <strong>Convert</strong> we also have finer control over the output, allowing us to rename files.</p>
 <pre><code>mogrify [options] input.filetype
 
-convert input.filetype [options] output.filetype</code></pre><div class="listbox box"><ul class="linklist">
-<li><a href="https://imagemagick.org/script/mogrify.php"  target="_blank" rel="noreferrer" >⬩&nbsp; Mogrify option list</a></li>
-<li><a href="https://imagemagick.org/script/convert.php"  target="_blank" rel="noreferrer" >⬩&nbsp; Convert option list</a></li>
+convert input.filetype [options] output.filetype</code></pre><div class="listbox box"><ul>
+<li><a href="https://imagemagick.org/script/mogrify.php"  target="_blank" rel="noreferrer" >↗ Mogrify option list</a></li>
+<li><a href="https://imagemagick.org/script/convert.php"  target="_blank" rel="noreferrer" >↗ Convert option list</a></li>
 </ul>
 </ul></div>
 
@@ -77,12 +77,12 @@ or
         -sampling-factor 4:2:0 \
         -strip -quality 80 \
         -interlace line input.jpg</code></pre><hr>
-<div class="listbox box"><div><h2>References Used</h2></div><ul class="linklist">
-<li><a href="https://kokorobot.ca/site/image_optimization.html"  target="_blank" rel="noreferrer" >⬩&nbsp; Rekka Bellum&#39;s Image Optimisation Guide</a></li>
+<div class="listbox box"><div><h2>References Used</h2></div><ul>
+<li><a href="https://kokorobot.ca/site/image_optimization.html"  target="_blank" rel="noreferrer" >↗ Rekka Bellum&#39;s Image Optimisation Guide</a></li>
 
-<li><a href="http://www.aptivate.org/webguidelines/Images.html"  target="_blank" rel="noreferrer" >⬩&nbsp; Web Design Guidelines for lean images</a></li>
+<li><a href="http://www.aptivate.org/webguidelines/Images.html"  target="_blank" rel="noreferrer" >↗ Web Design Guidelines for lean images</a></li>
 
-<li><a href="https://imagemagick.org/"  target="_blank" rel="noreferrer" >⬩&nbsp; Imagemagick</a></li>
+<li><a href="https://imagemagick.org/"  target="_blank" rel="noreferrer" >↗ Imagemagick</a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/wiki/#linux-wiki">← Back to  Wiki </a>
