--- a/wiki/linux/pdf/index.html
+++ b/wiki/linux/pdf/index.html
@@ -50,12 +50,12 @@ BookmarkPageNumber: 4</code></pre>
 <pre><code>pdftk input.pdf \
 update_info metadata.txt \
 output output.pdf</code></pre><hr>
-<div class="listbox box"><div><h2>Links</h2></div><ul class="linklist">
-<li><a href="https://www.tomshardware.com/how-to/manipulate-pdf-files-with-pdftk"  target="_blank" rel="noreferrer" >⬩&nbsp; PDFTK Guide on tom&#39;s hardware</a></li>
+<div class="listbox box"><div><h2>Links</h2></div><ul>
+<li><a href="https://www.tomshardware.com/how-to/manipulate-pdf-files-with-pdftk"  target="_blank" rel="noreferrer" >↗ PDFTK Guide on tom&#39;s hardware</a></li>
 
-<li><a href="https://en.wikipedia.org/wiki/PDFtk"  target="_blank" rel="noreferrer" >⬩&nbsp; PDFTK Wikipedia Page</a></li>
+<li><a href="https://en.wikipedia.org/wiki/PDFtk"  target="_blank" rel="noreferrer" >↗ PDFTK Wikipedia Page</a></li>
 
-<li><a href="https://github.com/myollie/img2pdf"  target="_blank" rel="noreferrer" >⬩&nbsp; Img2Pdf Github</a></li>
+<li><a href="https://github.com/myollie/img2pdf"  target="_blank" rel="noreferrer" >↗ Img2Pdf Github</a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/wiki/#linux-wiki">← Back to  Wiki </a>
