--- a/wiki/linux/sftp/index.html
+++ b/wiki/linux/sftp/index.html
@@ -36,8 +36,8 @@
 <div><h3 id="notes">Notes</h3><p>To transfer a whole directory of files, the <strong>-r</strong> flag can be used.</p></div>
 </div>
 <hr>
-<div class="listbox box"><div><h2>Links</h2></div><ul class="linklist">
-<li><a href="https://homebrewserver.club/category/fundamentals.html"  target="_blank" rel="noreferrer" >⬩&nbsp; HomeBrewServer.club&#39;s fundamentals guides</a></li>
+<div class="listbox box"><div><h2>Links</h2></div><ul>
+<li><a href="https://homebrewserver.club/category/fundamentals.html"  target="_blank" rel="noreferrer" >↗ HomeBrewServer.club&#39;s fundamentals guides</a></li>
 
 </ul></div>
 
