--- a/wiki/rockbox_advanced/missing_features/index.html
+++ b/wiki/rockbox_advanced/missing_features/index.html
@@ -18,14 +18,15 @@
 <div class="title"><h1 id="top">Missing Features List</h1><hr></div>
 <p>This page serves as documentation for my plans to extend the system which powers themes in Rockbox. This current plan aims to extend the abilities available to themes while following the intentions which the theme engine was built around.</p>
 <div class="listbox box">
-<h2>Table of Contents</h2>
-<details><summary>Expand</summary>
-<ul class="linklist">
+<h2 style="padding:12px 5%;">Table of Contents</h2>
+<details><summary>Menu</summary>
+<ul>
 <li><a href="#currently-working-on" >• Currently Working On</a></li>
 <li><a href="#planned-features" >• Planned Features</a></li>
 <li><a href="#distant-plans" >• Distant Plans</a></li>
 </ul>
 </details></div>
+
 <hr>
 
 <h2 id="currently-working-on">Currently Working On</h2><p>These are features I&rsquo;m currently working on programming within Rockbox&rsquo;s source code.</p>
