--- a/wiki/rockbox_advanced/themed_lists_notes/index.html
+++ b/wiki/rockbox_advanced/themed_lists_notes/index.html
@@ -60,6 +60,8 @@
 %Vi(Sub_Menu,3,55,302,-,-)
 %Vi(Half_Menu,3,28,182,-,-)</code></pre><p>These viewports can then be called alongside your %Lb viewports wherever you manage those.</p>
 
+<h2 id="dont-draw-on-the-backdrop">Don&rsquo;t draw on the Backdrop</h2><p>It&rsquo;ll crash :(</p>
+
 <nav class="navbut"><a class="prev" href="/wiki/#rockbox-theming">← Back to  Wiki </a>
 
 </nav>
