--- a/wiki/rockbox_theming/introduction/index.html
+++ b/wiki/rockbox_theming/introduction/index.html
@@ -36,7 +36,7 @@ This has meant that older, more complicated (and inefficient) ways of implementi
 <p>I highly recommend checking out the <a href="https://www.rockbox.org/wiki/UiSimulator" target="_blank" rel="noopener">Ui Simulator</a> as an alternative to using a device to test, as it allows for must faster iteration and can provide detailed errors from the command line.</p>
 
 <h2 id="basic-terminology">Basic Terminology</h2><p>There is no concrete terminology used when talking about themes, but there&rsquo;s been some loose terms used over the years that I will attempt to frame here.</p>
-<div class="listbox box"><ul class="linklist">
+<div class="listbox box"><ul>
 
 <li>⚬ <strong>Theming Engine</strong> - A common term used to describe the internal system which manages the creation of themes.</li>
 <li>⚬ <strong>WPS</strong> - While Playing Screen. The name given to the music player part of a theme.</li>
