--- a/wiki/seedharvesting/index.html
+++ b/wiki/seedharvesting/index.html
@@ -34,9 +34,9 @@
 <figcaption>The harvested seeds!</figcaption></figure>
 
 <hr>
-<div class="listbox box"><div><h2>Further Reading</h2></div><ul class="linklist">
-<li><a href="https://irelandswildlife.com/bluebell-hyacinthoides-non-scripta/"  target="_blank" rel="noreferrer" >⬩&nbsp; Ireland&#39;s Wildlife Bluebell page</a></li>
-<li><a href="https://www.thespruce.com/growing-english-bluebells-5094292"  target="_blank" rel="noreferrer" >⬩&nbsp; Growing and caring for Bluebells</a></li>
+<div class="listbox box"><div><h2>Further Reading</h2></div><ul>
+<li><a href="https://irelandswildlife.com/bluebell-hyacinthoides-non-scripta/"  target="_blank" rel="noreferrer" >↗ Ireland&#39;s Wildlife Bluebell page</a></li>
+<li><a href="https://www.thespruce.com/growing-english-bluebells-5094292"  target="_blank" rel="noreferrer" >↗ Growing and caring for Bluebells</a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/wiki/#nature-wiki">← Back to  Wiki </a>
