--- a/about/colophon/testpage/index.html
+++ b/about/colophon/testpage/index.html
@@ -22,14 +22,15 @@
 <h2 id="header-2">Header 2</h2>
 <h3 id="header-3">Header 3</h3>
 <h4 id="header-4">Header 4</h4><div class="listbox box">
-<h2>Table of Contents</h2>
-<details><summary>Expand</summary>
-<ul class="linklist">
+<h2 style="padding:12px 5%;">Table of Contents</h2>
+<details><summary>Menu</summary>
+<ul>
 <li><a href="#first-section" >• First Section</a></li>
 <li><a href="#second-section" >• Second Section</a></li>
 <li><a href="#third-section" >• Third Section</a></li>
 </ul>
 </details></div>
+
 
 <h2 id="first-section">First Section</h2><a href="" class="clickbox box " >
 
@@ -60,7 +61,7 @@
 
 <div><h3 id="text-box">Text Box</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</p></div>
 </div>
-<div class="listbox box"><div><h2>Text Box with List</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</p></div><ul class="linklist">
+<div class="listbox box"><div><h2>Text Box with List</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</p></div><ul>
 
 <li>⚬ Item One.</li>
 <li>⚬ Item Two.</li>
@@ -74,13 +75,13 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor i
 </div>
 <pre><code>Example Codeblock
 
-%?and(%if(%ps, !=, 1),%if(%mm, =, 1),%or(%if(%fc, =, 4),%if(%fc, =, 5),%if(%fc, =, 7),%if(%fc, =, 11),%if(%fc, =, 13)))&lt;%xd(lossless)&gt;</code></pre><div class="listbox box"><div><h2>List of Links</h2></div><ul class="linklist">
+%?and(%if(%ps, !=, 1),%if(%mm, =, 1),%or(%if(%fc, =, 4),%if(%fc, =, 5),%if(%fc, =, 7),%if(%fc, =, 11),%if(%fc, =, 13)))&lt;%xd(lossless)&gt;</code></pre><div class="listbox box"><div><h2>List of Links</h2></div><ul>
 <li><a href="/" >• Option One</a></li>
 <li><a href="/" >• Option Two</a></li>
 <li><a href="/" >• Option Three</a></li>
-<li><a href="https://d00k.net/"  target="_blank" rel="noreferrer" >⬩&nbsp; External Link</a></li>
+<li><a href="https://d00k.net/"  target="_blank" rel="noreferrer" >↗ External Link</a></li>
 </ul></div>
-<div class="listbox box"><div><h2>List of Links w/ Text</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</p></div><ul class="linklist">
+<div class="listbox box"><div><h2>List of Links w/ Text</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant. Sed ut perspiciatis, unde omnis iste.</p></div><ul>
 <li><a href="/" >• Option One</a></li>
 <li><a href="/" >• Option Two</a></li>
 <li><a href="/" >• Option Three</a></li>
