--- a/about/connections/index.html
+++ b/about/connections/index.html
@@ -16,36 +16,36 @@
 
 <div class="title"><h1 id="top">Connections</h1><hr></div>
 <p>Various connections of friends and folks from around the</p>
-<div class="listbox box"><div><h2>Friends</h2></div><ul class="linklist">
+<div class="listbox box"><div><h2>Friends</h2></div><ul>
 
-<li><a href="https://www.pixouls.xyz/"  target="_blank" rel="noreferrer" >⬩&nbsp; Pixoul&#39;s Site</a></li>
+<li><a href="https://www.pixouls.xyz/"  target="_blank" rel="noreferrer" >↗ Pixoul&#39;s Site</a></li>
 
-<li><a href="https://njoqi.me/"  target="_blank" rel="noreferrer" >⬩&nbsp; njoqi</a></li>
+<li><a href="https://njoqi.me/"  target="_blank" rel="noreferrer" >↗ njoqi</a></li>
 
-<li><a href="https://lucas.love/"  target="_blank" rel="noreferrer" >⬩&nbsp; Lucas.love</a></li>
+<li><a href="https://lucas.love/"  target="_blank" rel="noreferrer" >↗ Lucas.love</a></li>
 
-<li><a href="https://ghettobastler.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; Ghettobastler</a></li>
+<li><a href="https://ghettobastler.com/"  target="_blank" rel="noreferrer" >↗ Ghettobastler</a></li>
 
-<li><a href="https://82mhz.net/"  target="_blank" rel="noreferrer" >⬩&nbsp; 82MHz&#39;s Site</a></li>
+<li><a href="https://82mhz.net/"  target="_blank" rel="noreferrer" >↗ 82MHz&#39;s Site</a></li>
 
-<li><a href="https://www.simonpanrucker.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; Simon Panrucker&#39;s Site</a></li>
+<li><a href="https://www.simonpanrucker.com/"  target="_blank" rel="noreferrer" >↗ Simon Panrucker&#39;s Site</a></li>
 
-<li><a href="https://thesam.zone/"  target="_blank" rel="noreferrer" >⬩&nbsp; theSam.Zone</a></li>
+<li><a href="https://thesam.zone/"  target="_blank" rel="noreferrer" >↗ theSam.Zone</a></li>
 
-<li><a href="https://jagtalon.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; Jag Talon</a></li>
+<li><a href="https://jagtalon.com/"  target="_blank" rel="noreferrer" >↗ Jag Talon</a></li>
 
-<li><a href="https://www.paritybit.ca/"  target="_blank" rel="noreferrer" >⬩&nbsp; jbauer&#39;s Site</a></li>
+<li><a href="https://www.paritybit.ca/"  target="_blank" rel="noreferrer" >↗ jbauer&#39;s Site</a></li>
 
 </ul></div>
-<div class="listbox box"><div><h2>Webring</h2><p>A bunch of my favourite sites from the <a href="https://webring.xxiivv.com/" target="_blank" rel="noopener">Merveilles</a> webring.</p></div><ul class="linklist">
-<li><a href="https://wiki.xxiivv.com/site/home.html"  target="_blank" rel="noreferrer" >⬩&nbsp; XXIIVV Wiki</a></li>
-<li><a href="https://thomasorus.com"  target="_blank" rel="noreferrer" >⬩&nbsp; Thomasorus</a></li>
-<li><a href="https://ritualdust.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; RitualDust</a></li>
-<li><a href="https://tendigits.space/"  target="_blank" rel="noreferrer" >⬩&nbsp; TenDigits</a></li>
-<li><a href="https://kokorobot.ca/site/home.html"  target="_blank" rel="noreferrer" >⬩&nbsp; Kokorobot</a></li>
-<li><a href="https://badd10de.dev/"  target="_blank" rel="noreferrer" >⬩&nbsp; Bad Diode</a></li>
-<li><a href="https://j3s.sh/"  target="_blank" rel="noreferrer" >⬩&nbsp; j3s.sh</a></li>
-<li><a href="https://pketh.org/"  target="_blank" rel="noreferrer" >⬩&nbsp; Pketh</a></li>
+<div class="listbox box"><div><h2>Webring</h2><p>A bunch of my favourite sites from the <a href="https://webring.xxiivv.com/" target="_blank" rel="noopener">Merveilles</a> webring.</p></div><ul>
+<li><a href="https://wiki.xxiivv.com/site/home.html"  target="_blank" rel="noreferrer" >↗ XXIIVV Wiki</a></li>
+<li><a href="https://thomasorus.com"  target="_blank" rel="noreferrer" >↗ Thomasorus</a></li>
+<li><a href="https://ritualdust.com/"  target="_blank" rel="noreferrer" >↗ RitualDust</a></li>
+<li><a href="https://tendigits.space/"  target="_blank" rel="noreferrer" >↗ TenDigits</a></li>
+<li><a href="https://kokorobot.ca/site/home.html"  target="_blank" rel="noreferrer" >↗ Kokorobot</a></li>
+<li><a href="https://badd10de.dev/"  target="_blank" rel="noreferrer" >↗ Bad Diode</a></li>
+<li><a href="https://j3s.sh/"  target="_blank" rel="noreferrer" >↗ j3s.sh</a></li>
+<li><a href="https://pketh.org/"  target="_blank" rel="noreferrer" >↗ Pketh</a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/about/">← Back to  About </a>
