--- a/about/setup/index.html
+++ b/about/setup/index.html
@@ -22,7 +22,7 @@
 
 
 <h2 id="hardware">Hardware</h2><p>I have a variety of hardware in setup. All run open software/operating systems if possible. My laptop is running Fedora Linux since 2021, though it can be booted into Windows off a second hard drive if necessary. My Pixel 3a is running Lineage OS and my Kobo is running koreader. I run Rockbox on my iPod, with custom themes developed by myself like <a href="/design/adwaitapod/">adwaitapod</a> and <a href="/design/themify/">themify</a>.</p>
-<div class="listbox box"><div><h2>Devices</h2></div><ul class="linklist">
+<div class="listbox box"><div><h2>Devices</h2></div><ul>
 
 <li>⚬ Lenovo Thinkpad E580 Laptop.</li>
 <li>⚬ Keychron C1 Wired Keyboard.</li>
@@ -35,7 +35,7 @@
 </ul></div>
 
 <h3 id="audio">Audio</h3><p>I have a largely salvaged/donated audio setup I put together from folks who were throwing stuff out. My amplifier is a second-hand purchase on ebay, the same with my iPod. My iPod is modified with larger, flash based storage, a bigger battery and a haptic feedback motor in place of the piezo speaker. My music collection is a mixture of CDs and digital downloads from Bandcamp or ripped albums.</p>
-<div class="listbox box"><div><h2>Audio Hardware</h2></div><ul class="linklist">
+<div class="listbox box"><div><h2>Audio Hardware</h2></div><ul>
 
 <li>⚬ YAMAHA AX-380 Amplifier.</li>
 <li>⚬ Sony Speakers (unknown model).</li>
