--- a/design/beryl_logo/index.html
+++ b/design/beryl_logo/index.html
@@ -23,9 +23,9 @@
 <h2 id="beryl-visual-identity">Beryl Visual Identity</h2>
 <img  src="/img/design/Visual_Identity_Guide.png" loading="lazy" alt="A small, black, white and orange bee carrying a leaf into it&#39;s nest in a hole">
 
-<div class="listbox box"><div><h2>Links</h2></div><ul class="linklist">
-<li><a href="https://fosstodon.org/@Beryl"  target="_blank" rel="noreferrer" >⬩&nbsp; Follow Beryl on the Fediverse</a></li>
-<li><a href="https://thesam.zone/"  target="_blank" rel="noreferrer" >⬩&nbsp; Sam&#39;s Blog</a></li>
+<div class="listbox box"><div><h2>Links</h2></div><ul>
+<li><a href="https://fosstodon.org/@Beryl"  target="_blank" rel="noreferrer" >↗ Follow Beryl on the Fediverse</a></li>
+<li><a href="https://thesam.zone/"  target="_blank" rel="noreferrer" >↗ Sam&#39;s Blog</a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
