--- a/design/compacticons/index.html
+++ b/design/compacticons/index.html
@@ -19,9 +19,9 @@
 <p>Compacticons is an open-source symbolic icon set designed around a core limitation of 14x13 pixels and 28x13 pixels. This strict limitation came from a desire to create more compact user interfaces without obstructing the user&rsquo;s ability to discern information.</p>
 <p>Each icon is designed to be highly legible, with care put into pixel hinting for perfect results. This makes them great to use on devices of all resolutions. The current initial set of icons are designed for music based apps and systems, however the range of targetted usecases will be expanded over time.</p>
 <hr>
-<div class="listbox box"><div><h2>links</h2></div><ul class="linklist">
-<li><a href="https://github.com/D0-0K/compacticons"  target="_blank" rel="noreferrer" >⬩&nbsp; compacticons git repo</a></li>
-<li><a href="https://github.com/D0-0K/compacticons/archive/refs/tags/release.zip"  target="_blank" rel="noreferrer" >⬩&nbsp; download the set</a></li>
+<div class="listbox box"><div><h2>links</h2></div><ul>
+<li><a href="https://github.com/D0-0K/compacticons"  target="_blank" rel="noreferrer" >↗ compacticons git repo</a></li>
+<li><a href="https://github.com/D0-0K/compacticons/archive/refs/tags/release.zip"  target="_blank" rel="noreferrer" >↗ download the set</a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
