--- a/design/famicase/index.html
+++ b/design/famicase/index.html
@@ -24,10 +24,10 @@
 
 <p>The 2021 Famicase Exhibition took place between April 29th and May 31st.</p>
 <hr>
-<div class="listbox box"><div><h2>Links</h2></div><ul class="linklist">
-<li><a href="https://famicase.com/"  target="_blank" rel="noreferrer" >⬩&nbsp; Famicase Website</a></li>
+<div class="listbox box"><div><h2>Links</h2></div><ul>
+<li><a href="https://famicase.com/"  target="_blank" rel="noreferrer" >↗ Famicase Website</a></li>
 
-<li><a href="https://super-meteor.com/?pid=159388800"  target="_blank" rel="noreferrer" >⬩&nbsp; Purchase the Famicase 2021 Zine</a></li>
+<li><a href="https://super-meteor.com/?pid=159388800"  target="_blank" rel="noreferrer" >↗ Purchase the Famicase 2021 Zine</a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
