--- a/design/rebble_weather/index.html
+++ b/design/rebble_weather/index.html
@@ -41,9 +41,9 @@
 <figcaption>The ball prototypes.</figcaption></figure>
 
 <hr>
-<div class="listbox box"><div><h2>Links</h2></div><ul class="linklist">
-<li><a href="https://github.com/D0-0K/Pebble-Icons"  target="_blank" rel="noreferrer" >⬩&nbsp; Pebble Icons Git Repo</a></li>
-<li><a href="https://old.heydays.no/project/pebble/"  target="_blank" rel="noreferrer" >⬩&nbsp; Heydays Pebble Icons Page</a></li>
+<div class="listbox box"><div><h2>Links</h2></div><ul>
+<li><a href="https://github.com/D0-0K/Pebble-Icons"  target="_blank" rel="noreferrer" >↗ Pebble Icons Git Repo</a></li>
+<li><a href="https://old.heydays.no/project/pebble/"  target="_blank" rel="noreferrer" >↗ Heydays Pebble Icons Page</a></li>
 </ul></div>
 
 <nav class="navbut"><a class="prev" href="/design/">← Back to  Design Portfolio </a>
