--- a/wiki/ecovillage/index.html
+++ b/wiki/ecovillage/index.html
@@ -31,14 +31,14 @@ a large <a href="https://cloughjordancommunityfarm.ie/" target="_blank" rel="noo
 <p>The village has an installation of a 500m² solar panel array, and every building appears to have their own installations of some kind of panel. In terms of waste management, the village is dependent on the local council water treatment facilities. This dependency however has stopped the village from expanding, the facilities being at max capacity means they must either find their own solutions or work with the government to improve the system already in place, which they appear to be doing.</p>
 
 <h2 id="final-thoughts">Final Thoughts</h2><p>The Ecovillage is a fascinating place, it&rsquo;s calm, peaceful soundscape adds to the way of life there. The village is host to many interesting people, and equally interesting projects. It&rsquo;s a host for a boom of culture and nature that meets the goals of the original project.</p>
-<div class="listbox box"><div><h2>Further Reading</h2></div><ul class="linklist">
-<li><a href="https://www.thevillage.ie/"  target="_blank" rel="noreferrer" >⬩&nbsp; Cloughjordan Ecovillage</a></li>
+<div class="listbox box"><div><h2>Further Reading</h2></div><ul>
+<li><a href="https://www.thevillage.ie/"  target="_blank" rel="noreferrer" >↗ Cloughjordan Ecovillage</a></li>
 
-<li><a href="https://www.youtube.com/c/REDGardens/videos"  target="_blank" rel="noreferrer" >⬩&nbsp; Resident Bruce Darrel&#39;s youtube channel on farming</a></li>
+<li><a href="https://www.youtube.com/c/REDGardens/videos"  target="_blank" rel="noreferrer" >↗ Resident Bruce Darrel&#39;s youtube channel on farming</a></li>
 
-<li><a href="http://wecreate.ie/"  target="_blank" rel="noreferrer" >⬩&nbsp; The local Fablab</a></li>
+<li><a href="http://wecreate.ie/"  target="_blank" rel="noreferrer" >↗ The local Fablab</a></li>
 
-<li><a href="https://en.wikipedia.org/wiki/Ecovillage"  target="_blank" rel="noreferrer" >⬩&nbsp; Ecovillage Wikipedia page</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Ecovillage"  target="_blank" rel="noreferrer" >↗ Ecovillage Wikipedia page</a></li>
 </ul></div>
 
 <h2 id="gallery">Gallery</h2>
