--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <li><a href="/about/">About</a></li>
 </ul></div></nav></div>
 <div class="main layout">
-<img src="/img/assets/homeimage.png" alt="shadows on a dimly lit wall" width="720px" height="540px" style="border-radius:20px;margin-top:24px"> 
+<img src="/img/assets/homeimage.png" alt="shadows on a dimly lit wall" width="720px" height="540px" style="border-radius:20px;margin-top:24px;object-fit:cover;height:60vh;max-height:540px"> 
 <div class="text borderless box">
 
 <div><h2 id="dooknet-ˈdʊk">dook.net (/ˈdʊk/)</h2><p>A Personal Website, Blog, Photo Gallery and Information tool.</p></div>
